# compilers-project

./: CMakeLists.txt  README.md  main.cpp
include/: interpreter.h  lexer.h  parser.h  printer.h  semantic.h
include/lexer/: keyword.h
src/: semantic.cpp
src/interpreter/: interpret.cpp  interpreter.cpp
src/interpreter/bool/: evalBool.cpp
src/interpreter/eval/: evalExpr.cpp
src/interpreter/for/: runFor.cpp
src/interpreter/function/: runFunction.cpp
src/interpreter/if/: runIf.cpp
src/interpreter/print/: printIRS.cpp  printList.cpp  printListCall.cpp  printTuple.cpp  printTupleCall.cpp  printTypeCheck.cpp  printer.cpp
src/interpreter/tuple/: tupleCall.cpp
src/interpreter/while/: runWhile.cpp
src/lexer/: lexer.cpp
src/list/: listCall.cpp
src/parser/: parser.cpp
src/printer/: printer.cpp
src/semantic/: decl.cpp  opt.cpp  semantic.cpp  semantic2.cpp  types.cpp
tests/: test_common
tests/array/operation/: code.txt  out.txt
tests/common_tests/: test10.adi
tests/for/: code.txt  out.txt
tests/func/call/: code.txt  out.txt
tests/func/lambda/: code.txt
tests/func/recursion/: code.txt
tests/if/: code.txt
tests/interpreter/: test_arrays  test_for  test_func  test_if  test_logical  test_operations  test_output  test_recursive  test_tuples  test_typecheck  test_types  test_while  test_while_2
tests/parser/: expr_test.adi  out.adi
tests/semantic/: test.adi  test_assign.adi  test_declar.adi  test_expr.adi  test_for.adi  test_func.adi  test_if.adi  test_list.adi  test_while.adi
tests/types/print/: out.txt  (+1 more)
tests/while/: code.txt  out.txt
(+17 files in other folders)
